--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 			<p data-ui="say"></p>
 		</div>
 		<div data-ui="quick-menu" class="align-right">
-			<span data-action="back"><span class="fa fa-arrow-left"></span> <span data-string="Back">Back</span></span>
+		<!--	<span data-action="back"><span class="fa fa-arrow-left"></span> <span data-string="Back">Back</span></span>
 			<span data-action="distraction-free"><span class="fa fa-eye" data-action="distraction-free"></span> <span data-string="Hide" data-action="distraction-free">Hide</span></span>
 			<span data-action="auto-play"><span class="fa fa-play-circle" data-action="auto-play"></span> <span data-string="AutoPlay" data-action="auto-play">Auto</span></span>
 			<span data-action="open-menu" data-open="save"><span class="fa fa-save" data-action="open-menu" data-open="save"></span> <span data-string="Save" data-action="open-menu" data-open="save">Save</span></span>
 			<span data-action="open-menu" data-open="load"><span class="fa fa-undo" data-action="open-menu" data-open="load"></span> <span data-string="Load" data-action="open-menu" data-open="load">Load</span></span>
 			<span data-action="open-menu" data-open="settings"><span class="fa fa-gear" data-action="open-menu" data-open="settings"></span> <span data-string="Settings" data-action="open-menu" data-open="settings">Settings</span></span>
-			<span data-action="end"><span class="fa fa-times-circle-o" data-action="end"></span> <span data-string="Quit" data-action="end">Quit</span></span>
+			<span data-action="end"><span class="fa fa-times-circle-o" data-action="end"></span> <span data-string="Quit" data-action="end">Quit</span></span> -->
 		</div>
 	</section>
 
@@ -193,9 +193,9 @@
 
 		<div class="vertical align-right bottom animated bounceIn" data-ui="inner-menu">
 			<button data-action="start" data-string="Start">Start</button>
-			<button data-action="open-menu" data-open="load" data-string="Load">Load</button>
+			<!--<button data-action="open-menu" data-open="load" data-string="Load">Load</button>
 			<button data-action="open-menu" data-open="settings" data-string="Settings">Settings</button>
-			<button data-action="open-menu" data-open="help" data-string="Help">Help</button>
+			<button data-action="open-menu" data-open="help" data-string="Help">Help</button> -->
 		</div>
 	</section>
 
