--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 			</div>
 		</div>
 	</div>
-
+	
+	</div>
 	<div data-notice="slot-overwrite" class="modal">
 		<div class="row spaced">
 			<p data-string="SlotOverwrite" class="col xs12 m12 l12 xl12">Are you sure you want to overwrite this slot?</p>
